--- a/manifest/svc.yaml
+++ b/manifest/svc.yaml
@@ -1,12 +1,24 @@
 apiVersion: v1
+
 kind: Service
+
 metadata:
-  name: case-study-service
+
+  name: docker-case-study
+
+  namespace: default
+
 spec:
-  type: NodePort
+
   selector:
-    app: case-study-app
+
+    app: docker-case-study
+
   ports:
+
     - port: 3000
-      targetPort: 3020
-      nodePort: 3020
+
+      targetPort: 3000
+
+      protocol: TCP
+ 
